# zeroclaw

./: CHANGELOG-next.md  Cargo.toml  Containerfile  Dockerfile  Dockerfile.debian
api/search.index/: 001a796e25.js  001ce6bc04.js  002eef9c6a.js  002f1705cd.js  003947d4f7.js  003cb0a182.js  00745b4839.js  007b810c14.js  00aaad54ba.js  00bd3de503.js  00c35b55b4.js  00fd9dd69e.js  010eed8136.js  011dc7ad64.js  012ba0b799.js  01389f3de1.js  013f565b0d.js  014cb1fa0c.js  0170ea0d32.js  0171778f8a.js  0177f0fa6e.js  0179c7500f.js  01870f3eff.js  01b8c5b303.js  01d9dcbb5e.js  01da8fb57f.js  01db8f276b.js  01e510f851.js  01f2d0fd0d.js  021cac6852.js  022a655338.js  022efc32b0.js  0245dc1315.js  0295278638.js  02ba3b0ce4.js  02e0a25bf4.js  02e3c19630.js  02e71ee9a0.js  02f3e9f6f6.js  02fc90ca4d.js  (+1988 more)
api/zeroclaw/: all.html  struct.Config.html
api/zeroclaw_runtime/: all.html
apps/zerocode/: Cargo.toml
apps/zerorelay/: Dockerfile  compose.yaml  relay.example.toml
benches/: agent_benchmarks.rs
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-config/: Cargo.toml
crates/zeroclaw-gateway/: Cargo.toml
crates/zeroclaw-memory/: Cargo.toml
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-tls/: Cargo.toml
crates/zeroclaw-tls/src/: certgen.rs  lib.rs
crates/zeroclaw-tools/: Cargo.toml
docs/book/: peer-groups.toml
master/en/: 404.html  api.html  index.html  searcher-c2a407aa.js
src/: lib.rs  main.rs
src/alias_cli/: mod.rs
src/config/: mod.rs
src/docs/: cli.rs  extract.rs  mod.rs
src/memory/: cli.rs
src/skills/: mod.rs
web/: package.json
(+3280 files in other folders)
