[package]
name = "zeroclaw-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared TLS / mTLS construction (server config, client verifier, certificate pinning, PEM loading) for ZeroClaw."
publish = false

[dependencies]
anyhow = "1.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
# Certificate generation for the secure-by-default auto-gen + issuance paths.
# Pinned to the `ring` backend to match the project's rustls provider.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem", "x509-parser"] }
time = { version = "0.3", default-features = false, features = ["std"] }
zeroclaw-log.workspace = true

[dev-dependencies]
tempfile = "3.26"
